Replace Travis, add canonical Apache-2.0 license, and standardise SPDX headers (#830)
* refactor: rename documentation files and update links in README

* refactor: rename documentation files and update links in README

* replace the license header with a one-liner

* refactor: use MapUtil for creating unmodifiable map of primitive sizes

* refactor: remove unused imports from Jvm and JvmTest classes